Fix alignment with icons and search button.

--- a/start.css
+++ b/start.css
@@ -68,6 +68,9 @@ body {
   height: 32px;
   vertical-align: middle;
   background-image: url('spritesheet.png');
+}
+
+.link-box > a > div {
   margin-right: 6px;
 }
 
